# libspectrum

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  Device.cpp  README.md  index.html  index.md  main.py  mkdocs.yml  objects.inv  pymodule.cpp  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release.yml
docs/: index.md  installation.md  reference.md
examples/: .gitignore  aproximations.py  colorimeter.ipynb  colorimeter.py  colorimeter_data.py  exposure_setting.py  led_calculator.py  led_parameters.ipynb  led_parametrs.ipynb  pyrometer.ipynb  pyrometer.py  realtime_graph.py  record_spectrum.ipynb  simple_notebook.ipynb
examples/colorimeter/: colorimeter.ipynb  index.html
examples/led_parameters/: index.html
examples/led_parametrs/: index.html
examples/pyrometer/: index.html  pyrometer.ipynb
examples/record_spectrum/: index.html  record_spectrum.ipynb
examples/simple_notebook/: index.html
installation/: index.html
py_src/: __init__.py
py_src/demo/: __main__.py  exposures_test.py  graph_demo.py  profile.json
py_src/demo/DemoApp/: __main__.py  aproximations.py  dataEstimator.py  dataLayout.py  demoApp.py  graphLayout.py  pyspectrum_mock.py  savior.py  spectrometerController.py
pyspectrum/: __init__.py  data.py  dataclasses.py  device_factory.py  errors.py  spectrometer.py
pyspectrum/demo/: __main__.py  demo.ipynb  exposures_test.py  factory_config.json  graph_demo.py
pyspectrum/demo/DemoApp/: data.pickle  demoApp.py
reference/: index.html  reference.md
search/: search_index.json
src/: Device.h  RawSpectrometer.h  RawSpectrum.h  Spectrometer.cpp  Spectrometer.h  Spectrum.h  UsbContext.cpp  UsbContext.h  UsbContextD2XX.cpp  UsbContextLibFTDI.cpp  UsbRawSpectrometer.cpp  UsbRawSpectrometer.h  main.cpp  pymodule.cpp
tests/: test_spectrometer.py
utils/: convert.py  format.sh
vcpkg_overlays/libftdi1/: ftdipp-exports.patch  ftdipp-project-name.patch  ftdipp-shared-libs.patch  portfile.cmake  vcpkg.json  win32-libdir.patch
